# C-OS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cos/: __init__.py  app.py  runtime.py
cos/configs/: settings.py
cos/core/: __init__.py  models.py
cos/diagnostics/: __init__.py  metrics.py
cos/experiments/: benchmark_retrieval.py  demo_pipeline.py  load_sample_dataset.py
cos/extraction/: __init__.py  extractor.py  temporal.py
cos/graph/: __init__.py  base.py  in_memory.py  neo4j_store.py
cos/inference/: action_tracker.py  advice.py  evaluation.py  feedback.py  insights.py  llm.py  next_step.py  onboarding.py  today_brief.py  weekly_summary.py
cos/ingestion/: async_queue.py  chunking.py  loaders.py  preprocessing.py  service.py
cos/resolution/: __init__.py  contradiction.py  dedup.py  service.py
cos/temporal/: __init__.py  queries.py  trajectory.py
cos/ui/: __init__.py  api.py  web.py
cos/vector/: __init__.py  base.py  embeddings.py  faiss_store.py  hybrid_retriever.py  in_memory.py
datasets/: README.md  sample_memory_notes.jsonl
docs/: ARCHITECTURE.md  DEMO.md  DEMO_VIDEO_SCRIPT.md  EVALUATION.md  QUICKSTART.md
scripts/: local_smoke_test.ps1  release_v0.1.0.ps1
tests/: test_advice_engine.py  test_api_smoke.py  test_hybrid_retrieval.py  test_llm_deepseek_integration.py  test_sprint2_features.py  test_sprint3_quality.py  test_temporal_and_contradictions.py  test_today_brief.py
(+5 files in other folders)
